--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "webpack-dev-server": "^3.11.1"
   },
   "dependencies": {
+    "file-loader": "^6.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "url-loader": "^4.1.1"
   }
 }
